# use-pattern

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  RELEASING.md  release-plz.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: facade-publish-readiness.yml  publish-readiness.yml  release-plz-release.yml  sbom.yml
crates/use-glob/: Cargo.toml  README.md
crates/use-glob/src/: lib.rs
crates/use-glob/tests/: use_glob_tests.rs
crates/use-match/: Cargo.toml  README.md
crates/use-match/src/: lib.rs
crates/use-match/tests/: use_match_tests.rs
crates/use-pattern/: Cargo.toml  README.md
crates/use-pattern/examples/: facade_full.rs
crates/use-pattern/src/: lib.rs  prelude.rs
crates/use-pattern/tests/: facade.rs
crates/use-regex/: Cargo.toml  README.md
crates/use-regex/src/: lib.rs
crates/use-regex/tests/: use_regex_tests.rs
crates/use-wildcard/: Cargo.toml  README.md
crates/use-wildcard/src/: lib.rs
crates/use-wildcard/tests/: use_wildcard_tests.rs
