[package]
name = "use-glob"
description = "Predictable glob helper utilities for RustUse"
publish = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["glob", "pattern", "wildcard", "matching", "path"]
categories = ["text-processing"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
