[package]
name = "use-regex"
description = "Practical regex utility helpers for RustUse"
publish = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["regex", "pattern", "matching", "text", "search"]
categories = ["text-processing"]

[dependencies]
regex.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
